# es6dotpy

./: README.md  pyproject.toml
es6dotpy/: lexer.py  parser.py
tests/: test_es6dotpy.py
